--- a/Software/src/FxmlFiles/MainMenu.fxml
+++ b/Software/src/FxmlFiles/MainMenu.fxml
@@ -1,18 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LayoutClasses.MainMenu">
    <children>
-      <Button layoutX="124.0" layoutY="71.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Input Data" />
-      <Button layoutX="125.0" layoutY="124.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Edit Data" />
-      <Button layoutX="125.0" layoutY="178.0" mnemonicParsing="false" text="Schedule Exams" />
-      <Button layoutX="218.0" layoutY="294.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="164.0" text="Generate Schedule" />
-      <Text layoutX="238.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="e.g. courses, classrooms, examiners, test-takers, etc..." wrappingWidth="330.6320495605469" />
-      <Text layoutX="238.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="remove/edit input data" wrappingWidth="330.6320495605469" />
-      <Text layoutX="238.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="schedule exams based on input data" wrappingWidth="330.6320495605469" />
-      <Text layoutX="203.0" layoutY="278.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Only after all data has been added!" wrappingWidth="330.6320495605469" />
+      <VBox alignment="CENTER" layoutX="250.0" prefHeight="400.0" prefWidth="600.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Exam Scheduler">
+               <font>
+                  <Font size="30.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </Text>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <Button minWidth="100.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Input Data" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="e.g. courses, classrooms, examiners, test-takers, etc..." wrappingWidth="330.6320495605469" />
+               </children>
+               <VBox.margin>
+                  <Insets top="40.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <Button minWidth="100.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Edit Data" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="remove/edit input data" wrappingWidth="330.6320495605469" />
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <Button minWidth="100.0" mnemonicParsing="false" text="Schedule Exams" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="schedule exams based on input data" wrappingWidth="330.6320495605469" />
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </HBox>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Text stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Only after all data has been added!" textAlignment="CENTER" wrappingWidth="330.6320495605469">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Text>
+                  <Button minWidth="100.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="164.0" text="Generate Schedule" />
+               </children>
+            </VBox>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </VBox>
    </children>
 </AnchorPane>
